fix css on mobile

--- a/static-site/styles/style.css
+++ b/static-site/styles/style.css
@@ -52,7 +52,7 @@ body {
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px; /* Space below the session status box */
-    width: 30%;
+    width: 20em;
     margin: auto;
 }
 
